--- a/client/src/Pages/Homepage/Homepage.css
+++ b/client/src/Pages/Homepage/Homepage.css
@@ -19,7 +19,8 @@
 }
 @media (max-width: 786px) {
   .gridproduct-section {
-    min-width: 95vw;
-    grid-template-columns: 1fr 1fr;
+    /* border: 1px solid ; */
+    min-width: 95vw !important;
+    grid-template-columns: 1fr 1fr !important;
   }
 }
