--- a/client/src/Components/CardSection/CardSection.css
+++ b/client/src/Components/CardSection/CardSection.css
@@ -21,14 +21,14 @@
   margin-top: 10px;
 }
 .card-grid {
-  /* border: 1px solid; */
+  /* border: 1px solid;  */
   min-width: 75%;
-  min-height: 45vh;
+  min-height: 50vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   justify-items: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .layout-filter {
