--- a/client/src/Components/UserProfile/Order/Order.css
+++ b/client/src/Components/UserProfile/Order/Order.css
@@ -18,12 +18,13 @@
 }
 .cart-cont {
   /* border: 1px solid; */
-  min-height: 25vh;
-  max-height: 25vh;
+  min-height: 12vh;
+  max-height: 23vh;
   display: flex;
   flex-direction: column;
   gap: 7px;
   overflow: scroll;
+  padding: 5px 0px;
 }
 .cart-cont::-webkit-scrollbar {
   display: none;
@@ -41,13 +42,27 @@
 .remove-order-btn {
   min-width: 25%;
   min-height: 5vh;
+  font-size: 19px;
+  font-family: var(--font1);
+}
+.cant-cancel {
+  border: 1px solid;
+  min-width: 100%;
+  min-height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
 }
 .main-order-card {
   /* border: 1px solid; */
   min-width: 100%;
+  min-height: 35vh;
+  max-height: 35vh;
   padding: 0px 5px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 7px;
   background-color: rgba(0, 0, 0, 0.096);
   padding: 7px;
