--- a/client/src/Pages/CartPage/Cart.css
+++ b/client/src/Pages/CartPage/Cart.css
@@ -54,11 +54,11 @@
 }
 .cart-card img {
   /* border: 1px solid; */
-  min-width: 10%;
-  max-width: 10%;
+  min-width: 12%;
+  max-width: 12%;
   min-height: 8vh;
   max-height: 8vh;
-  border-radius: 50%;
+  border-radius: 5px;
   margin-left: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
@@ -94,7 +94,6 @@
 .remove-btn:hover {
   border: 1px solid rgb(255, 0, 0);
   color: rgb(255, 0, 0);
-
 }
 
 .checkout-sec {
@@ -159,7 +158,7 @@
   transition: 0.2s ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-.not-user{
+.not-user {
   /* border: 1px solid; */
   display: flex;
   flex-direction: column;
