--- a/client/src/Components/footer/Footer.css
+++ b/client/src/Components/footer/Footer.css
@@ -5,7 +5,7 @@
   min-height: 8vh;
   display: flex;
   justify-content: center;
-  background-color: var(--blue);
+  background-color: rgba(0, 0, 0, 0.61);
 }
 .inner-footer {
   /* border: 1px solid; */
