--- a/client/src/Components/CardSection/CardSection.css
+++ b/client/src/Components/CardSection/CardSection.css
@@ -73,9 +73,10 @@
 }
 
 .btn-loadmore {
-  border: 1px solid;
+  min-width: 20%;
   align-self: center;
-  background-color: rgba(129, 255, 181, 0.274);
+  background-color: rgba(0, 0, 0, 0.61);
+  color: aliceblue;
   font-size: 20px;
   margin: 10px;
   padding: 7px;
@@ -88,7 +89,7 @@
   cursor: pointer;
 }
 .btn-loadmore:hover {
-  border: 2px solid green;
+  transform: scale(1.05);
   transition: 0.3s ease-in-out;
 }
 @media (max-width: 786px) {
