--- a/client/src/Components/CardSection/CardSection.css
+++ b/client/src/Components/CardSection/CardSection.css
@@ -21,32 +21,39 @@
   margin-top: 10px;
 }
 .card-grid {
-  /* border: 1px solid;  */
-  min-width: 75%;
+  /* border: 1px solid; */
+  min-width: 80%;
+  max-width: 80%;
   min-height: 50vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 10px;
   justify-items: center;
   /* align-items: center; */
+  padding: 0px 10px;
 }
 
 .layout-filter {
   /* border: 1px solid; */
   margin: 10px 0px;
-  min-width: 85vw;
+  min-width: 95vw;
+  max-width: 95vw;
   display: flex;
 }
 .filter-cont {
   /* border: 1px solid; */
-  min-width: 25%;
+  min-width: 20%;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  overflow: hidden;
 }
 
 .filter-category h4 {
-  background-color: rgba(173, 216, 230, 0.486);
+  background-color: rgba(0, 0, 0, 0.274);
   padding: 5px;
   font-family: var(--font1);
   font-weight: 400;
+  color: white;
 }
 
 .filter-category label {
@@ -69,7 +76,7 @@
   margin-top: 20px;
 }
 .filter-price h4 {
-  background-color: aquamarine;
+  background-color: rgba(0, 0, 0, 0.274);
 }
 
 .btn-loadmore {
@@ -92,6 +99,15 @@
   transform: scale(1.05);
   transition: 0.3s ease-in-out;
 }
+.filter-btn {
+  min-width: 95%;
+  font-size: 20px;
+  max-height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 5px;
+}
 @media (max-width: 786px) {
   .card-grid {
     /* border: 1px solid; */
@@ -108,19 +124,30 @@
   }
   .filter-cont {
     /* border: 1px solid; */
-    min-width: 25%;
+    min-height: 30vh;
+    margin-bottom: 10px;
   }
   .filter-category {
+    /* border: 1px solid; */
+    display: flex;
+    flex-direction: column;
+  }
+  .for-mobile {
     display: flex;
     max-width: 95vw;
-    overflow-y: scroll;
+    overflow-x: scroll;
+    padding: 7px;
   }
+  .for-mobile::-webkit-scrollbar {
+    display: none;
+  }
+
   .filter-category h4 {
     font-size: 15px;
   }
   .filter-category label {
     /* border: 1px solid; */
-    font-size: 15px;
+    font-size: 14px;
     min-width: 25vw;
     max-width: 25vw;
     display: flex;
