--- a/client/src/Components/UserProfile/UserProfile.css
+++ b/client/src/Components/UserProfile/UserProfile.css
@@ -17,8 +17,8 @@
 }
 
 .toggle-btn {
-  border: none;
-  min-width: 100px;
+  border: 1px solid;
+  min-width: 20%;
   max-width: 100px;
   font-size: 20px;
   font-family: var(--font1);
@@ -26,11 +26,15 @@
   padding: 3px;
   border-radius: 5px;
 }
-
+.toggle-btn:hover {
+  background-color: rgba(0, 0, 0, 0.11);
+}
 .switch-cont {
   /* border: 1px solid; */
   min-width: 100%;
   min-height: 73vh;
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 786px) {
@@ -40,10 +44,10 @@
     max-width: 95vw;
     min-height: 6vh;
   }
-  .toggle-btn{
+  .toggle-btn {
     font-size: 16px;
-    min-width: 80px;
-    max-width: 80px;
+    min-width: 20%;
+    max-width: 50%;
     max-height: 6vh;
   }
 }
