--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -9,7 +9,9 @@
   position: sticky;
   top: 0;
   z-index: 2;
-  background-color: var(--bgcolor);
+  /* background-color: var(--bgcolor); */
+  background-color: #ECEE81;
+  margin-bottom: 10px;
 }
 
 .nav-top {
