--- a/client/src/Components/ProductModal/ProModal.css
+++ b/client/src/Components/ProductModal/ProModal.css
@@ -10,11 +10,13 @@
   background-color: var(--bgcolor);
   display: flex;
   justify-content: center;
+  padding-bottom: 50px;
 }
 .grid-modal {
   /* border: 1px solid; */
   overflow: scroll;
   grid-template-columns: 1fr 1fr 1fr 1fr !important;
+  margin: 12px 0px;
 }
 .grid-modal::-webkit-scrollbar {
   display: none;
@@ -22,12 +24,17 @@
 
 @media (max-width: 786px) {
   .ProModal-cont {
+  /* border: 1px solid; */
+    min-width: 100vw;
+    max-width: 100vw;
     top: 15vh;
   }
   .grid-modal {
     /* border: 1px solid; */
     min-height: 83vh;
     max-height: 83vh;
+    min-width: 95vw;
     grid-template-columns: 1fr 1fr !important;
+    padding: 5px !important;
   }
 }
